RESOLVED FIXED147649
Subframes with no current HistoryItem should not prevent page-caching
https://bugs.webkit.org/show_bug.cgi?id=147649
Summary Subframes with no current HistoryItem should not prevent page-caching
Chris Dumez
Reported 2015-08-04 13:57:30 PDT
Subframes with no current HistoryItem should not prevent page-caching. We need one for the main frame as this is the key in the PageCache. However, there is no reason to require one for subframes. Frames do no have a current HistoryItem until something has been loaded in them.
Attachments
Patch (6.20 KB, patch)
2015-08-04 14:25 PDT, Chris Dumez
no flags
Archive of layout-test-results from ews102 for mac-mavericks (562.45 KB, application/zip)
2015-08-04 14:59 PDT, Build Bot
no flags
Patch (7.12 KB, patch)
2015-08-04 15:40 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-08-04 13:57:48 PDT
Chris Dumez
Comment 2 2015-08-04 14:25:53 PDT
Build Bot
Comment 3 2015-08-04 14:59:43 PDT
Comment on attachment 258210 [details] Patch Attachment 258210 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/16568 New failing tests: http/tests/navigation/page-cache-iframe-no-current-historyItem.html
Build Bot
Comment 4 2015-08-04 14:59:46 PDT
Created attachment 258215 [details] Archive of layout-test-results from ews102 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-mavericks Platform: Mac OS X 10.9.5
Andreas Kling
Comment 5 2015-08-04 15:01:09 PDT
Comment on attachment 258210 [details] Patch Looks like the new test is failing on mac-ews
Chris Dumez
Comment 6 2015-08-04 15:40:45 PDT
WebKit Commit Bot
Comment 7 2015-08-04 17:28:21 PDT
Comment on attachment 258221 [details] Patch Clearing flags on attachment: 258221 Committed r187921: <http://trac.webkit.org/changeset/187921>
WebKit Commit Bot
Comment 8 2015-08-04 17:28:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.